Update and save changes to upload to the server

--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -18,8 +18,7 @@
   justify-content: center;
   display: -ms-flexbox;
   display: flex;
-  width: 34px;
-  height: 24px;
+  width: 100%;
 }
 
 .app-brand-logo.demo svg {
