Get last formation added and display it in hero section

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4449,6 +4449,8 @@ blockquote {
   border-radius: 20px !important;
   position: relative;
   overflow: hidden;
+  /* max-height: 600px; */
+  max-height: 600px;
 }
 
 .hero-main-image-two {
