Finish the megamenu

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11394,6 +11394,11 @@ blockquote {
   gap: 20px;
 }
 
+.menu-result {
+  max-height: 200px;
+  overflow-x: hidden;
+}
+
 .result-img-wrapper {
   display: flex;
   align-items: center;
@@ -11404,7 +11409,7 @@ blockquote {
 }
 
 .result-img-wrapper img {
-  height: 100%;
+  /* height: 100%; */
   border-radius: 5px;
 }
 
