--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12418,3 +12418,9 @@ input[type="radio"] {
 .f-header-content .btn-org {
   width: fit-content;
 }
+
+.formation-video {
+  border-radius: 24px;
+  width: 100%;
+  height: auto;
+}
