--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12443,6 +12443,7 @@ input[type="radio"] {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#76a9fa", GradientType=1);
   padding: 2rem;
   width: 100%;
+  height: 290px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
@@ -12489,7 +12490,7 @@ input[type="radio"] {
 
 .categorie-box .cat-title {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 0.98rem;
   color: var(--black);
 }
 
