--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11333,6 +11333,11 @@ blockquote {
 
 
 /* Mega menu */
+header {
+  padding: 10px 0;
+  box-shadow: 0px 1px 10px #00000014;
+}
+
 .mega-menu {
   display: flex;
   align-items: flex-start;
@@ -12525,6 +12530,11 @@ input[type="radio"] {
 
 /* Section hero for video animation design */
 
+.hero-video-animation {
+  padding-top: 125px;
+  padding-bottom: 130px;
+}
+
 .hero-v-content-wrapper {
   display: flex;
   align-items: center;
@@ -12551,6 +12561,7 @@ input[type="radio"] {
 }
 
 .hero-v-content-wrapper .video-parts {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12633,4 +12644,152 @@ input[type="radio"] {
 
 .hero-v-content-wrapper .video-parts .v-part video::-webkit-media-controls-panel {
   display: none;
+}
+
+.sticker-tage {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  background-color: var(--gray-bg-color);
+  box-shadow: 0 2px 15px rgba(128, 128, 128, 0.486);
+  width: 300px;
+  z-index: 3;
+  border-radius: 50px;
+  padding: 10px;
+}
+
+.sticker-tage .content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.sticker-tage .content-wrapper .sticker-title,
+.sticker-tage .content-wrapper p {
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 0;
+  font-weight: 700;
+}
+
+.sticker-tage .content-wrapper p {
+  text-transform: none;
+  font-weight: 500;
+}
+
+.sticker-tage.video-sticker {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  animation: slideVideoSticker 8s infinite;
+  animation-delay: 0s;
+  /* No delay for video sticker */
+}
+
+.sticker-tage.ressource-sticker {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  animation: slideRessourceSticker 10s infinite;
+  animation-delay: 0s;
+  /* Delay the ressource sticker by 4 seconds */
+}
+
+.sticker-tage.chat-sticker {
+  position: absolute;
+  top: 20%;
+  left: 12%;
+  animation: chatStackerAnimation 6s infinite;
+}
+
+
+@keyframes chatStackerAnimation {
+  0% {
+    left: 12%;
+    opacity: 0;
+  }
+
+  20% {
+    left: 5%;
+    opacity: 1;
+  }
+
+  50% {
+    left: 5%;
+    opacity: 1;
+  }
+
+  55% {
+    left: 2%;
+    opacity: 0;
+  }
+
+  100% {
+    left: 2%;
+    opacity: 0;
+  }
+}
+
+@keyframes slideVideoSticker {
+  0% {
+    left: 10%;
+    opacity: 0;
+  }
+
+  25% {
+    left: 5%;
+    opacity: 1;
+  }
+
+  60% {
+    left: 5%;
+    opacity: 1;
+    /* Stay visible */
+  }
+
+  65% {
+    left: 2%;
+    opacity: 0;
+    /* Hide quickly */
+  }
+
+  100% {
+    left: 2%;
+    opacity: 0;
+    /* Stay hidden */
+  }
+}
+
+@keyframes slideRessourceSticker {
+  0% {
+    left: 50%;
+    opacity: 0;
+  }
+
+  30% {
+    left: 45%;
+    opacity: 1;
+  }
+
+  70% {
+    left: 45%;
+    opacity: 1;
+    /* Stay visible */
+  }
+
+  75% {
+    left: 40%;
+    opacity: 0;
+    /* Hide quickly */
+  }
+
+  100% {
+    left: 40%;
+    opacity: 0;
+    /* Stay hidden */
+  }
 }
