--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12554,6 +12554,7 @@ input[type="radio"] {
 .hero-v-content-wrapper .hero-v-content p {
   font-size: 1rem;
   line-height: 1.625;
+  padding: 20px 0px;
 }
 
 .hero-v-content-wrapper .hero-v-content .btn-org {
