--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12904,3 +12904,72 @@ input[type="radio"] {
   align-items: center;
   justify-content: space-between;
 }
+
+.top-bar-right  {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.search-bar {
+  width: 560px;
+}
+
+.search-bar input{
+  width: 100%;
+  color: #091e42;
+  background-color: var(--gray-bg-color);
+  border: 1px solid #c2c7d0;
+  border-radius: 30px;
+  height: 52px;
+  margin-bottom: 0;
+  padding: 8px 20px;
+  font-size: 18px;
+  transition: border-color .2s;
+}
+
+.call-btn {
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+  color: var(--gray-bg-color);
+  padding: 10px 40px;
+  border-radius: 50px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  background-size: 200%;
+  background-position: left;
+  transition: background-position 0.5s ease-in-out;
+}
+
+.call-btn:hover {
+  background-position: right; /* Shift gradient smoothly */
+}
+
+.call-btn img {
+  height: 20px;
+  animation: vibrate-pause 1.2s infinite; 
+}
+
+@keyframes vibrate-pause {
+  0% {
+    transform: translateX(0);
+  }
+  8% {
+    transform: translateX(-2px);
+  }
+  16% {
+    transform: translateX(2px);
+  }
+  24% {
+    transform: translateX(-2px);
+  }
+  32% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(0); /* Remains still for the rest of the duration */
+  }
+}
