Added login image bg

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12936,6 +12936,11 @@ input[type="radio"] {
   transition: border-color .2s;
 }
 
+.search-bar input:focus{
+  border-color: var(--orange-clr);
+  outline: none !important;
+}
+
 .call-btn {
   background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
   color: var(--gray-bg-color);
@@ -12982,5 +12987,5 @@ input[type="radio"] {
 }
 
 .w-password-page img {
-  width: 70%;
+  width: 500px;
 }
