--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11799,7 +11799,7 @@ input[type="radio"] {
   padding: 0 10px;
   font-size: 14px;
   margin: 20px 0;
-  cursor: pointer;
+  cursor: context-menu;
 }
 
 .r-side-floating .class-categories .selected {
