Finished profile page

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -13151,7 +13151,7 @@ input[type="radio"] {
 
 .profile-wrapper .profile-wrapper-flex .profile-left {
   width: 40%;
-  height: 400px;
+  height: 350px;
   padding: 30px 30px;
   display: flex;
   flex-direction: column;
@@ -13210,7 +13210,7 @@ input[type="radio"] {
 
 .profile-wrapper .profile-wrapper-flex  .profile-right {
   width: 60%;
-  height: 400px;
+  height: 350px;
   padding: 30px 30px;
   display: flex;
   flex-direction: column;
@@ -13249,6 +13249,18 @@ input[type="radio"] {
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   padding: 10px 0 10px 0;
   font-weight: 600;
+}
+
+.profile-wrapper .profile-wrapper-flex  .profile-right .infos-content .info input{
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  padding: 2px 10px;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.profile-wrapper .profile-wrapper-flex  .profile-right .infos-content .info input:focus-visible{
+  outline: none;
 }
 
 .profile-wrapper .profile-wrapper-flex  .profile-right .infos-content .info span {
@@ -13344,10 +13356,17 @@ input[type="radio"] {
 
 /* Table cours */
 
+.courses-wrapper {
+  height: 200px;
+  overflow-y: scroll;
+}
+
 .courses-table {
   width: 100%;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
+  font-size: 16px !important;
+
 }
 
 .courses-table th {
