--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -11734,7 +11734,7 @@ header {
 .accordion li {
   list-style: none;
   background-image: none;
-  background-color: #F3F7EC;
+  background-color: #ff5b0026;
   border: 1px solid var(--gray-clr);
   border-radius: 50px;
   padding: 20px 45px;
@@ -12489,6 +12489,7 @@ input[type="radio"] {
   justify-content: space-between;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  box-shadow: 0px 7px 25px #00000014;
 }
 
 .categorie-box:hover {
@@ -13428,6 +13429,72 @@ input[type="radio"] {
   background-color: #f1f1f1;
 }
 
+/* Swiper style */
+
+.swiper {
+  width: 100%;
+  height: 500px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-slide.dr-block {
+  position: relative;
+  background-color: white;
+  height: 450px;
+  width: 350px;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: 0px 7px 25px #00000014;
+  cursor: grab;
+}
+
+.swiper-slide.dr-block .dr-block-name {
+  position: absolute;
+  color: var(--off-white-bg-color);
+  font-size: 25px;
+  font-weight: 700;
+  bottom: 20px;
+  left: 30px;
+  z-index: 3;
+}
+
+.swiper-slide.dr-block img {
+  transition: all 0.3s ease-in-out;
+}
+
+.swiper-slide.dr-block:hover img {
+  transform: scale(1.1);
+}
+
+.swiper-slide.dr-block .dr-block-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgb(21, 36, 58);
+  background: linear-gradient(0deg, rgb(21, 36, 58) 0%, rgba(21, 36, 58, 0.11) 35%, rgba(255, 255, 255, 0) 100%);
+  z-index: 2;
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--orange-clr) !important;
+}
 
 
 
