--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4154,6 +4154,9 @@ blockquote {
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
+  padding: 10px;
+  box-shadow: 0px 7px 25px #00000014;
+  border-radius: 20px;
 }
 
 .single-class-grid-card {
