--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -4142,8 +4142,8 @@ blockquote {
 }
 
 .collection-grid-classes {
-  grid-column-gap: 24px;
-  grid-row-gap: 24px;
+  grid-column-gap: 12px;
+  grid-row-gap: 12px;
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
@@ -11628,10 +11628,10 @@ header {
 }
 
 .information-wrap .cat-tagge {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
   background-color: var(--warrning-clr-light);
-  color: var(--warrning-clr-dark);
+  color: #BB6D13;
   width: fit-content;
   padding: 0px 10px;
   border-radius: 5px;
@@ -11658,7 +11658,7 @@ header {
 }
 
 .information-wrap .i-planning img {
-  height: 20px;
+  height: 15px;
 }
 
 .information-wrap .i-planning .i-date,
@@ -11666,9 +11666,10 @@ header {
   display: flex;
   align-items: center;
   gap: 10px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   color: var(--primary-color);
+  line-height: 0;
 }
 
 .primary-btn {
