--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12402,6 +12402,7 @@ input[type="radio"] {
 }
 
 .formations-wrapper .formations-filter ul li input[type="radio"] {
+  display: block !important;
   appearance: none;
   -webkit-appearance: none;
   position: absolute;
@@ -12411,10 +12412,28 @@ input[type="radio"] {
 .formations-wrapper .formations-filter ul li input[type="radio"]::before{
   content: "";
   position: absolute;
-  height: 20px;
-  width: 20px;
-  border: 2px solid black;
-  left: 0;
+  height: 16px;
+  width: 16px;
+  border: 2px solid var(--orange-clr);
+  border-radius: 5px;
+  left: 7px;
+  top:50%;
+  transform: translateY(-50%);
+}
+
+.formations-wrapper .formations-filter ul li input[type="radio"]:checked::before {
+  background: var(--white);
+}
+
+.formations-wrapper .formations-filter ul li input[type="radio"]:checked::after {
+  position: absolute;
+  content: "";
+  height: 12px;
+  width: 12px;
+  background: var(--orange-clr);
+  margin-left: 11px;
+  margin-top: -6px;
+  border-radius: 3px;
 }
 
 .formations-wrapper .formations-filter ul {
@@ -12424,7 +12443,8 @@ input[type="radio"] {
 
 .formations-wrapper .formations-filter ul li {
   cursor: pointer;
-  padding: 0px 10px;
+  padding: 20px 10px;
+  margin-bottom: 0px !important;
 }
 
 .formations-wrapper .formations-filter ul li:hover {
@@ -12433,7 +12453,8 @@ input[type="radio"] {
 }
 
 .formations-wrapper .formations-filter ul li span {
-  line-height: 25px;
+  line-height: 18px;
+  margin-left: 25px;
 }
 
 .formations-wrapper .formations {
